# carebears

./: .gitignore  README.md  cron.sh  docker-compose-dev.yaml  docker-compose-http.yaml  docker-compose.yaml
.github/workflows/: static.yml
app/: .gitignore  README.md  carebears.service.template  database.py  install.sh  main.py  models.py  pyproject.toml  requirements.txt  services.py  test.py
app/static/css/: styles.css
app/templates/: index.html  patient.html
appdocs/: usecases.md
beszel_data/: id_ed25519  id_ed25519.pub
docker/: init-letsencrypt.sh  init.sh
docker/app/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf  nginx.conf.dev  nginx.conf.http
docker/nginx/ssl/: certificate.crt  private.key
docs/: CNAME
testpatients/: jane.txt
www/: index.html
